add ctrl click to disable abilities + order tag for abilities + adjust mana display (9 per row, 3 rows max) + check usage blocked while ticking actions